2010-01-25  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_mutex.c: avoid conflict between pthread and win32 mutex
	implementations on unix-like build environments on windows. (#56)

	* src/pj_init,src/projects.h,src/pj_transform.c,nad/testvarious:
	Correct seriously broken +lon_wrap implementation.  (#62)

	* src/pj_mutex.c: fix creation of mutex on win32 to be in
	unacquired state in pj_init_lock to avoid an extra reference. (#63)

2009-10-19  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/ntf_r93.gsb: updated with file from IGN (#52).

	* docs/*: files moved out of source tree (still in svn)

2009-09-29  Frank Warmerdam  <warmerdam@pobox.com>

	* nmake.opt: Update so that various items can be externally 
	overridden (#54).

2009-09-24  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/Makefile.am: add ntv2 and ignf testing if grid shift files
	are available.

2009-09-23  Frank Warmerdam  <warmerdam@pobox.com>

	* Preparing for 4.7.0 release.

	* nad/makefile.vc: do not attempt to install ntf_r93.gsb by default.

	* src/pj_init.c: Temporarily set locale to "C" to avoid locale
	specific number parsing (#49).

	* src/pj_rho.c: move rho out of structure, threadsafety issue (#41).

	* nmake.opt: improve comments (#50).

	* nad/epsg: regenerated - use more symbolic ellipsoid/datum names, and
	fix EPSG 3857 and 3785 (#51).

	* src/pj_gridlist.c: Implement mutex protection for grid loader/cacher.

	* src/pj_mutex.c: fix up windows support.

	* nad/ntf_r93.gsb: set mime-type to binary so it isn't corrupted on 
	windows systems.

2009-06-17  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_mutex.c: Implement win32 and pthread mutex support.

	* configure, src/Makefile.am: add --without-mutex support to configure

2009-06-16  Frank Warmerdam  <warmerdam@pobox.com>

	* README: Update windows build instructions (#30).

	* nad/epsg: Upgraded to EPSG 7.1. 

2009-05-19  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/testvarious,nad/testdatumfile: split datum file specific